# p2ptokens

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  netlify.toml  p2ptokens.example.toml
.github/workflows/: ci.yml  desktop.yml  pages.yml  release.yml
crates/client/: Cargo.toml  build.rs
crates/client/src/: config.rs  coordinator_client.rs  ctx.rs  http.rs  leecher.rs  lib.rs  main.rs  node.rs  seeder.rs  threads.rs  ui.html
crates/client/src/adapters/: claude.rs  compat.rs  files.rs  mod.rs  ollama.rs
crates/client/webui/: README.md  package-lock.json  package.json  shell.html  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/client/webui/examples/: index.html
crates/client/webui/src/: index.ts  mount.tsx  styles.css
crates/client/webui/src/components/: registry.ts
crates/client/webui/src/components/ChatContainer/: ChatContainer.tsx
crates/client/webui/src/components/History/: HistorySidebar.tsx  ThreadItem.tsx  ThreadStatusIcon.tsx
crates/client/webui/src/components/Input/: ChatInput.tsx  FilePreview.tsx  FileUploadButton.tsx
crates/client/webui/src/components/Messages/: AssistantMessage.tsx  FollowUpQuestions.tsx  LikeDislike.tsx  ResponseStepsList.tsx  ThoughtStream.tsx  UserMessage.tsx
crates/client/webui/src/components/Shared/: AutoScrollContainer.tsx  CopyContent.tsx  ErrorBoundary.tsx  MarkdownRenderer.tsx  ProgressMessage.tsx
crates/client/webui/src/components/SidePanel/: ComputerToolPreview.tsx  ProgressPreview.tsx  SidePanel.tsx  StreamingThoughtsPreview.tsx  ToolContentRenderer.tsx  ToolHeader.tsx  ToolTop.tsx
crates/client/webui/src/components/SidePanel/tools/: BrowserTool.tsx  CodeViewerTool.tsx  ErrorFallback.tsx  IframeTool.tsx  MarkdownTool.tsx  RunCodeTool.tsx  SearchEngineTool.tsx
crates/client/webui/src/hooks/: useFileUpload.ts  useTheme.ts  useThemeVars.ts
crates/client/webui/src/provider/: ChatProvider.tsx
crates/client/webui/src/provider/adapters/: defaultAdapter.ts
crates/client/webui/src/store/: createChatStore.ts  createHistoryStore.ts  createPreviewStore.ts
crates/client/webui/src/streaming/: chunkHandler.ts  resumableStream.ts  streamingService.ts
crates/client/webui/src/types/: index.ts
crates/client/webui/src/utils/: constants.ts  helpers.ts
crates/coordinator/: Cargo.toml
crates/coordinator/src/: main.rs  state.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: main.rs
legal/: FINALIZATION-CHECKLIST.md  README.md  acceptable-use-policy.md  cookie-policy.md  exhibit-a-dpa.md  exhibit-b-hardware-security-specs.md  exhibit-c-fees-payouts.md  privacy-policy.md  provider-agreement.md  terms-of-service.md
scripts/: e2e.sh  loadtest.sh  relay-demo.sh  showcase.sh
site/: _headers  index.html
(+10 files in other folders)
