[workspace]
resolver = "2"
members = ["crates/shared", "crates/coordinator", "crates/client", "crates/desktop"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
async-stream = "0.3"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
reqwest = { version = "0.13", features = ["json", "stream", "native-tls-vendored"] }
dirs = "5"
libp2p-identity = { version = "0.2", features = ["ed25519", "peerid", "rand"] }
libp2p = { version = "0.56", features = [
  "tokio",
  "tcp",
  "noise",
  "yamux",
  "identify",
  "dcutr",
  "relay",
  "autonat",
  "upnp",
  "ping",
  "macros",
  "ed25519",
] }
libp2p-stream = "=0.4.0-alpha"

p2ptokens-shared = { path = "crates/shared" }
