[package]
name = "p2ptokens-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "p2p-coordinator"
path = "src/main.rs"

[dependencies]
p2ptokens-shared.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
clap.workspace = true
uuid.workspace = true
dashmap = "6"
