[package]
name = "p2ptokens-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "p2ptokens-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
p2ptokens-client = { path = "../client" }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
tracing-subscriber.workspace = true
